--- a/Labs/restaurant_site/style.css
+++ b/Labs/restaurant_site/style.css
@@ -10,40 +10,167 @@ html, body{
     height: 100%;
     width: 100%;
 }
-
-h1{
-    text-align: center;
-    font-family: "Orbitron", system-ui;
-
-}
-div.navbar{
-    margin-left: 1%;
-    font-style: normal;
+.hero-background{
+    background-image: url("images/conner-baker-cbvBcRUFWKk-unsplash.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    height: 100vh;
     position: absolute;
-    top: 40px;
-    left: 10%;
-    font-size: 100%;
-
+    background-color: darkgray;
 
 }
-img.Logo{
-    max-width: 10%;
-    height: auto;
-
+#pyramid{
+    margin-bottom: 10px;
 }
 div.Logo{
     background-color: rgba(128, 128, 128, 0.7);
     position: absolute;
     top: 0;
-    width: 100%;
-}
-.blurred-background{
-    height: 100vh;
-    margin:0;
-    padding: 0;
-    background-size: cover;
-    background: url("images/Caves-and-the-new-age-of-exploration.png") no-repeat fixed center center;
-    filter: blur(3px);
-    z-index: -1;
+    left: 15%;
+    bottom: 100%;
+    right: 50%;
+    width: inherit;
+    height: -webkit-fill-available;
 
+}
+body{
+    background: url("images/conner-baker-cbvBcRUFWKk-unsplash.jpg");
+    background-size: 99.99% 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 100vh;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    line-height: 1.5;
+
+}
+
+.p{
+    position: relative;
+    text-align: center;
+    width: 100%;
+    height: 25%;
+
+}
+.navbar-brand{
+    font-size: 34px;
+    color: #d18615;
+    background-color: #144a66;
+    border-style: ridge;
+    border-radius: 15px;
+    border-width: 6px;
+}
+
+.container{
+    width: 50%;
+    height: 60%;
+    position: relative;
+    top: 20%;
+    border-style: solid;
+    border-radius: 15px;
+    border-color: midnightblue;
+    border-width: 5px;
+    padding: 0;
+
+}
+.buttons{
+    background-color: orange;
+    border-color: midnightblue;
+    border-radius: 15px;
+    padding: 0;
+    margin: 0;
+}
+.buttons:hover{
+    transform: translateY(-8px);
+    box-shadow:0 18px 50px rgba(2,6,23,0.6);
+}
+.buttons3:hover{
+    transform: translateY(-8px);
+    box-shadow:0 18px 50px rgba(2,6,23,0.6);
+
+}
+h2{
+    position: relative;
+    width: fit-content;
+    top: 6%;
+    color: darkorange;
+}
+h1{
+    color: darkorange;
+}
+.roman{
+    color: darkorange;
+    position: relative;
+    background-color: midnightblue;
+    border-radius: 15px;
+    align-content: space-around;
+
+}
+.egypt{
+    color: darkorange;
+    position: relative;
+    left: 30%;
+    bottom: 100%;
+    background-color: midnightblue;
+    border-radius: 15px;
+    align-content: space-around;
+}
+.future{
+    color: darkorange;
+    position: relative;
+    left: 30%;
+    bottom: 100%;
+    background-color: midnightblue;
+    border-radius: 15px;
+    border-color: midnightblue;
+    border-width: 10px;
+    align-content: space-around;
+}
+
+
+.menu_description{
+    font-family: Papyrus, sans-serif;
+    font-size: 18px;
+    position: relative;
+    top: -20%;
+    height: fit-content;
+}
+.bg-body-tertiary{
+    --bs-bg-opacity: .7;
+}
+
+#home-button{
+    font-size: 24px;
+    font-family: Tagesschrift, sans-serif;
+}
+#menu-button{
+    font-size: 24px;
+    font-family: Tagesschrift, sans-serif;
+}
+#hiring-button{
+    font-size: 24px;
+    font-family: Tagesschrift, sans-serif;
+}
+.tagesschrift-regular {
+    font-family: "Tagesschrift", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+#welcome{
+    font-family: Tagesschrift, sans-serif;
+}
+#welcome2{
+    font-family: Tagesschrift, sans-serif;
+}
+#menu-title{
+    font-family: Tagesschrift, sans-serif;
+}
+#menu-description{
+    font-family: Tagesschrift, sans-serif;
+}
+#menu-price{
+    font-family: Tagesschrift, sans-serif;
 }
